--- a/css/index.css
+++ b/css/index.css
@@ -212,13 +212,14 @@ header .header_content {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-image: linear-gradient(rgba(37, 201, 206, 0), #25c9ce);
+  background-image: linear-gradient(to bottom right, rgba(37, 201, 206, 0), #25c9ce);
 }
 header .header_content h1 {
   border: 1px solid red;
   font-size: 5rem;
-  font-family: 'Lobster', cursive;
-  width: 15%;
+  font-family: 'Port Lligat Sans', sans-serif;
+  width: 50%;
+  text-align: center;
 }
 @media (max-width: 500px) {
   header .header_content h1 {
@@ -229,6 +230,7 @@ header .header_content h1 {
 header .header_content p {
   border: 1px solid blue;
   font-family: 'Questrial', sans-serif;
+  width: 50%;
 }
 @media (max-width: 500px) {
   header .header_content p {
@@ -237,6 +239,12 @@ header .header_content p {
 }
 header .header_content .start {
   font-size: 4rem;
+  background-color: white;
+  border-radius: 2rem;
+  font-family: 'Port Lligat Sans', sans-serif;
+  padding: 1%;
+  width: 40%;
+  text-align: center;
 }
 @media (max-width: 500px) {
   header .header_content hr {
@@ -246,9 +254,78 @@ header .header_content .start {
 }
 .section_one {
   display: flex;
+  border: 2px solid blue;
   color: #25c9ce;
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
 }
-.section_one img {
+.section_one .section_one_heading {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.section_one .section_one_heading h1 {
+  border: 1px solid green;
+  font-size: 4rem;
+  font-family: 'Podkova', serif;
+}
+.section_one .section_one_heading p {
+  border: 1px solid red;
+  font-family: 'Salsa', cursive;
+}
+.section_one .section_one_heading hr {
+  width: 60%;
+  border: 1px solid grey;
+  padding: 1%,0;
+}
+.section_one .pictures {
+  border: 2px solid red;
   height: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.section_one .pictures img {
+  height: 100%;
+  width: 25%;
+  border-radius: 7rem;
+  padding: 4%;
+}
+.section_one .icons {
+  border: 1px solid purple;
+  width: 100%;
+  height: 10%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.section_one .icons .otter_icon {
+  border: 1px solid green;
   width: 20%;
+  display: flex;
+  flex-direction: row;
+}
+.section_one .icons .otter_icon p {
+  padding: 5%;
+}
+.section_one .icons .hippo_icon {
+  border: 1px solid green;
+  width: 20%;
+  display: flex;
+  flex-direction: row;
+}
+.section_one .icons .hippo_icon p {
+  padding: 5%;
+}
+.section_one .icons .frog_icon {
+  border: 1px solid green;
+  width: 20%;
+  display: flex;
+  flex-direction: row;
+}
+.section_one .icons .frog_icon p {
+  padding: 5%;
 }
