--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,16 +1,91 @@
 .section_one {
     display: flex;
+    border: 2px solid blue;
     color: rgba(37,201,206,1);
+    height:100%;
+    width:100%;
+    flex-direction: column;
     
+    .section_one_heading {
+        width:100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     
+        h1 {
+            border: 1px solid green;
+            font-size: 4rem;
+            font-family: 'Podkova', serif;
+        
+        }
     
-    
-   
-    img {
-        height: 20%;
-        width: 20%;
-    
+        p {
+            border: 1px solid red;
+            font-family: 'Salsa', cursive;
+            
+        }
+        hr {
+            width: 60%;
+            border: 1px solid grey;
+            padding: 1%,0;
+        }
     }
 
-
+    .pictures {
+        border: 2px solid red;
+        height: 20%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+        img {
+            height: 100%;
+            width: 25%;
+            border-radius: 7rem;
+            padding: 4%;
+    
+        }
+    
+    }
+    .icons {
+        border: 1px solid purple;
+        width:100%;
+        height: 10%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        
+       
+        
+        .otter_icon {
+            border: 1px solid green;
+            width:20%;
+            display: flex;
+            flex-direction: row;
+           
+            p {
+                padding: 5%;
+            }
+        }
+        .hippo_icon {
+            border: 1px solid green;
+            width: 20%;
+            display: flex;
+            flex-direction: row;
+            p {
+                padding: 5%;
+            }
+        }
+        .frog_icon {
+            border: 1px solid green;
+            width: 20%;
+            display: flex;
+            flex-direction: row;
+            p {
+                padding: 5%;
+            }
+        }
+    
+    }
 }
