--- a/less/navigation.less
+++ b/less/navigation.less
@@ -99,7 +99,7 @@ header{
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        background-image: linear-gradient(rgba(37,201,206,0), rgba(37,201,206,1));
+        background-image: linear-gradient(to bottom right, rgba(37,201,206,0), rgba(37,201,206,1));
                
                
         @media(max-width: 500px) {
@@ -110,8 +110,9 @@ header{
         h1 {
             border: 1px solid red;
             font-size: 5rem;
-            font-family: 'Lobster', cursive;
-            width:15%;
+            font-family: 'Port Lligat Sans', sans-serif;
+            width:50%;
+            text-align: center;
 
                 
             @media(max-width: 500px){
@@ -124,7 +125,7 @@ header{
         p {
             border: 1px solid blue;
             font-family: 'Questrial', sans-serif;
-
+            width: 50%;
             @media(max-width: 500px){
                 width:50%;
             }
@@ -132,6 +133,12 @@ header{
         }
         .start {
             font-size: 4rem;
+            background-color:white;
+            border-radius: 2rem;
+            font-family: 'Port Lligat Sans', sans-serif;
+            padding: 1%;
+            width:40%;
+            text-align: center;
         }
         hr {
             
