--- a/css/index.css
+++ b/css/index.css
@@ -229,7 +229,8 @@ header .header_content h1 {
 }
 header .header_content p {
   border: 1px solid blue;
-  font-family: 'Questrial', sans-serif;
+  font-family: 'Port Lligat Sans', sans-serif;
+  font-size: 2rem;
   width: 50%;
 }
 @media (max-width: 500px) {
@@ -275,6 +276,7 @@ header .header_content .start {
 .section_one .section_one_heading p {
   border: 1px solid red;
   font-family: 'Salsa', cursive;
+  width: 50%;
 }
 .section_one .section_one_heading hr {
   width: 60%;
@@ -302,6 +304,10 @@ header .header_content .start {
   flex-direction: row;
   justify-content: space-around;
 }
+.section_one .icons p {
+  font-family: 'Life Savers', cursive;
+  font-size: 1.5rem;
+}
 .section_one .icons .otter_icon {
   border: 1px solid green;
   width: 20%;
@@ -328,4 +334,12 @@ header .header_content .start {
 }
 .section_one .icons .frog_icon p {
   padding: 5%;
+}
+.sectiom_two {
+  height: 20%;
+  width: 100%;
+}
+.sectiom_two img {
+  height: 10%;
+  width: 10%;
 }
