--- a/less/home-page.less
+++ b/less/home-page.less
@@ -23,6 +23,7 @@
         p {
             border: 1px solid red;
             font-family: 'Salsa', cursive;
+            width: 50%;
             
         }
         hr {
@@ -56,7 +57,10 @@
         flex-direction: row;
         justify-content: space-around;
         
-       
+       p {
+           font-family: 'Life Savers', cursive;
+           font-size: 1.5rem;
+       }
         
         .otter_icon {
             border: 1px solid green;
@@ -66,6 +70,7 @@
            
             p {
                 padding: 5%;
+
             }
         }
         .hippo_icon {
@@ -86,6 +91,20 @@
                 padding: 5%;
             }
         }
+    
+    }
+}
+
+.sectiom_two{
+    height:20%;
+    width:100%;
+    img{
+        height:10%;
+        width:10%;
+    }
+
+    .campaign_form {
+    
     
     }
 }
