--- a/less/navigation.less
+++ b/less/navigation.less
@@ -124,7 +124,8 @@ header{
             
         p {
             border: 1px solid blue;
-            font-family: 'Questrial', sans-serif;
+            font-family: 'Port Lligat Sans', sans-serif;
+            font-size: 2rem;
             width: 50%;
             @media(max-width: 500px){
                 width:50%;
