--- a/css/index.css
+++ b/css/index.css
@@ -127,7 +127,6 @@ header {
   flex-direction: column;
 }
 header .bg_img {
-  border: 1px solid purple;
   background-image: url("header.jpg");
   background-position: center;
   background-size: cover;
@@ -145,11 +144,12 @@ header .bg_img {
 header .bg_img .nav_container {
   border: 20px solid rgba(133, 134, 134, 0.5);
   border-radius: 1.2rem;
-  width: 70%;
+  width: 80%;
   height: 50%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  text-align: center;
 }
 @media (max-width: 500px) {
   header .bg_img .nav_container {
@@ -162,13 +162,11 @@ header .bg_img .nav_container {
   }
 }
 header .bg_img .nav_container p {
-  border: 1px solid green;
-  align-content: flex-end;
   color: white;
-  width: 40%;
-  font-size: 3rem;
+  width: 35%;
+  font-size: 2.5rem;
   padding-top: 1%;
-  font-family: 'Julius Sans One', sans-serif;
+  font-family: 'Podkova', serif;
   font-weight: bolder;
 }
 @media (max-width: 500px) {
@@ -180,7 +178,6 @@ header .bg_img .nav_container p {
   }
 }
 header .bg_img .nav_container nav {
-  border: 1px solid red;
   display: flex;
   justify-content: space-evenly;
   width: 70%;
@@ -193,12 +190,12 @@ header .bg_img .nav_container nav {
   }
 }
 header .bg_img .nav_container nav a {
-  border: 1px solid blue;
   text-decoration: none;
   color: #ffffff;
-  font-family: 'Julius Sans One', sans-serif;
+  font-family: 'Podkova', serif;
   font-size: 2rem;
   text-align: center;
+  padding-top: 2%;
 }
 @media (max-width: 500px) {
   header .bg_img .nav_container nav a {
@@ -207,7 +204,6 @@ header .bg_img .nav_container nav a {
   }
 }
 header .header_content {
-  border: 3px solid orange;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -215,7 +211,6 @@ header .header_content {
   background-image: linear-gradient(to bottom right, rgba(37, 201, 206, 0), #25c9ce);
 }
 header .header_content h1 {
-  border: 1px solid red;
   font-size: 5rem;
   font-family: 'Port Lligat Sans', sans-serif;
   width: 50%;
@@ -228,10 +223,10 @@ header .header_content h1 {
   }
 }
 header .header_content p {
-  border: 1px solid blue;
   font-family: 'Port Lligat Sans', sans-serif;
   font-size: 2rem;
   width: 50%;
+  padding: 1%;
 }
 @media (max-width: 500px) {
   header .header_content p {
@@ -239,9 +234,10 @@ header .header_content p {
   }
 }
 header .header_content .start {
-  font-size: 4rem;
+  font-size: 3rem;
   background-color: white;
   border-radius: 2rem;
+  border: 3px solid #3636f0;
   font-family: 'Port Lligat Sans', sans-serif;
   padding: 1%;
   width: 40%;
@@ -255,7 +251,6 @@ header .header_content .start {
 }
 .section_one {
   display: flex;
-  border: 2px solid blue;
   color: #25c9ce;
   height: 100%;
   width: 100%;
@@ -269,12 +264,10 @@ header .header_content .start {
   justify-content: center;
 }
 .section_one .section_one_heading h1 {
-  border: 1px solid green;
   font-size: 4rem;
   font-family: 'Podkova', serif;
 }
 .section_one .section_one_heading p {
-  border: 1px solid red;
   font-family: 'Salsa', cursive;
   width: 50%;
 }
@@ -284,7 +277,6 @@ header .header_content .start {
   padding: 1%,0;
 }
 .section_one .pictures {
-  border: 2px solid red;
   height: 20%;
   display: flex;
   align-items: center;
@@ -297,7 +289,6 @@ header .header_content .start {
   padding: 4%;
 }
 .section_one .icons {
-  border: 1px solid purple;
   width: 100%;
   height: 10%;
   display: flex;
@@ -309,8 +300,7 @@ header .header_content .start {
   font-size: 1.5rem;
 }
 .section_one .icons .otter_icon {
-  border: 1px solid green;
-  width: 20%;
+  width: 22%;
   display: flex;
   flex-direction: row;
 }
@@ -318,8 +308,7 @@ header .header_content .start {
   padding: 5%;
 }
 .section_one .icons .hippo_icon {
-  border: 1px solid green;
-  width: 20%;
+  width: 22%;
   display: flex;
   flex-direction: row;
 }
@@ -327,19 +316,24 @@ header .header_content .start {
   padding: 5%;
 }
 .section_one .icons .frog_icon {
-  border: 1px solid green;
-  width: 20%;
+  width: 22%;
   display: flex;
   flex-direction: row;
 }
 .section_one .icons .frog_icon p {
   padding: 5%;
 }
-.sectiom_two {
+.section_two {
   height: 20%;
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
-.sectiom_two img {
-  height: 10%;
-  width: 10%;
+.section_two img {
+  height: 25%;
+  width: 25%;
+  border-radius: 3rem;
+  padding: 2%;
 }
