--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,5 @@
 .section_one {
     display: flex;
-    border: 2px solid blue;
     color: rgba(37,201,206,1);
     height:100%;
     width:100%;
@@ -14,14 +13,12 @@
         justify-content: center;
     
         h1 {
-            border: 1px solid green;
             font-size: 4rem;
             font-family: 'Podkova', serif;
         
         }
     
         p {
-            border: 1px solid red;
             font-family: 'Salsa', cursive;
             width: 50%;
             
@@ -34,7 +31,6 @@
     }
 
     .pictures {
-        border: 2px solid red;
         height: 20%;
         display: flex;
         align-items: center;
@@ -50,7 +46,6 @@
     
     }
     .icons {
-        border: 1px solid purple;
         width:100%;
         height: 10%;
         display: flex;
@@ -63,8 +58,7 @@
        }
         
         .otter_icon {
-            border: 1px solid green;
-            width:20%;
+            width:22%;
             display: flex;
             flex-direction: row;
            
@@ -74,8 +68,7 @@
             }
         }
         .hippo_icon {
-            border: 1px solid green;
-            width: 20%;
+            width: 22%;
             display: flex;
             flex-direction: row;
             p {
@@ -83,8 +76,7 @@
             }
         }
         .frog_icon {
-            border: 1px solid green;
-            width: 20%;
+            width: 22%;
             display: flex;
             flex-direction: row;
             p {
@@ -95,12 +87,19 @@
     }
 }
 
-.sectiom_two{
+.section_two{
     height:20%;
     width:100%;
-    img{
-        height:10%;
-        width:10%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    
+    img {
+        height:25%;
+        width:25%;
+        border-radius: 3rem;
+        padding: 2%;
     }
 
     .campaign_form {
