--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,7 +6,6 @@ header{
             
     .bg_img {        
        
-        border: 1px solid purple;
         background-image: url("header.jpg");
         background-position: center;
         background-size: cover;
@@ -26,11 +25,12 @@ header{
             
             border: 20px solid rgba(133, 134, 134, .5);
             border-radius: 1.2rem;
-            width: 70%;
+            width: 80%;
             height: 50%;
             display: flex;
             justify-content: flex-end;
             align-items: center;
+            text-align: center;
                     
             @media(max-width: 500px) {
                 border:none;
@@ -42,14 +42,12 @@ header{
             }     
             
             p {
-                     
-                border: 1px solid green;
-                align-content: flex-end;
+                
                 color: white;
-                width: 40%;
-                font-size: 3rem;
+                width: 35%;
+                font-size: 2.5rem;
                 padding-top: 1%;
-                font-family: 'Julius Sans One', sans-serif;
+                font-family: 'Podkova', serif;
                 font-weight: bolder;
                 
                 @media(max-width: 500px){
@@ -61,7 +59,6 @@ header{
             }
 
             nav {
-                border: 1px solid red;
                 display: flex;
                 justify-content: space-evenly;
                 width: 70%;
@@ -73,12 +70,12 @@ header{
                 }        
                 
                 a {
-                    border: 1px solid blue;
                     text-decoration: none;
                     color: rgb(255, 255, 255);
-                    font-family: 'Julius Sans One', sans-serif;
+                    font-family: 'Podkova', serif;
                     font-size: 2rem;
                     text-align: center;
+                    padding-top:2%;
                            
                           
                     @media(max-width: 500px){
@@ -94,7 +91,7 @@ header{
         }
     }
     .header_content {
-        border: 3px solid orange;
+        
         display: flex;
         align-items: center;
         justify-content: center;
@@ -108,7 +105,7 @@ header{
         }
             
         h1 {
-            border: 1px solid red;
+          
             font-size: 5rem;
             font-family: 'Port Lligat Sans', sans-serif;
             width:50%;
@@ -123,19 +120,20 @@ header{
         }
             
         p {
-            border: 1px solid blue;
             font-family: 'Port Lligat Sans', sans-serif;
             font-size: 2rem;
             width: 50%;
+            padding: 1%;
             @media(max-width: 500px){
                 width:50%;
             }
             
         }
         .start {
-            font-size: 4rem;
+            font-size: 3rem;
             background-color:white;
             border-radius: 2rem;
+            border: 3px solid rgb(54, 54, 240);
             font-family: 'Port Lligat Sans', sans-serif;
             padding: 1%;
             width:40%;
