--- a/less/home-page.less
+++ b/less/home-page.less
@@ -15,12 +15,14 @@
         h1 {
             font-size: 4rem;
             font-family: 'Podkova', serif;
+            color: black;
         
         }
     
         p {
             font-family: 'Salsa', cursive;
             width: 50%;
+            color: black;
             
         }
         hr {
@@ -52,9 +54,11 @@
         flex-direction: row;
         justify-content: space-around;
         
+
        p {
            font-family: 'Life Savers', cursive;
            font-size: 1.5rem;
+           color:black;
        }
         
         .otter_icon {
@@ -100,10 +104,5 @@
         width:25%;
         border-radius: 3rem;
         padding: 2%;
-    }
-
-    .campaign_form {
-    
-    
     }
 }
