--- a/less/navigation.less
+++ b/less/navigation.less
@@ -138,6 +138,11 @@ header{
             padding: 1%;
             width:40%;
             text-align: center;
+            
+            a {
+                text-decoration: none;
+                color: black;
+            }
         }
         hr {
             
