--- a/css/index.css
+++ b/css/index.css
@@ -142,7 +142,7 @@ header .bg_img {
   }
 }
 header .bg_img .nav_container {
-  border: 20px solid rgba(133, 134, 134, 0.5);
+  border: 20px solid rgba(255, 230, 173, 0.5);
   border-radius: 1.2rem;
   width: 80%;
   height: 50%;
@@ -208,7 +208,7 @@ header .header_content {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-image: linear-gradient(to bottom right, rgba(37, 201, 206, 0), #25c9ce);
+  background-image: linear-gradient(to bottom right, rgba(255, 230, 173, 0), #ffe6ad);
 }
 header .header_content h1 {
   font-size: 5rem;
@@ -255,7 +255,7 @@ header .header_content .start a {
 }
 .section_one {
   display: flex;
-  color: #25c9ce;
+  color: #ffe6ad;
   height: 100%;
   width: 100%;
   flex-direction: column;
@@ -307,7 +307,7 @@ header .header_content .start a {
   color: black;
 }
 .section_one .icons .otter_icon {
-  width: 22%;
+  width: 25%;
   display: flex;
   flex-direction: row;
 }
@@ -315,7 +315,7 @@ header .header_content .start a {
   padding: 5%;
 }
 .section_one .icons .hippo_icon {
-  width: 22%;
+  width: 25%;
   display: flex;
   flex-direction: row;
 }
@@ -323,7 +323,7 @@ header .header_content .start a {
   padding: 5%;
 }
 .section_one .icons .frog_icon {
-  width: 22%;
+  width: 25%;
   display: flex;
   flex-direction: row;
 }
