--- a/less/navigation.less
+++ b/less/navigation.less
@@ -23,7 +23,7 @@ header{
             
         .nav_container {
             
-            border: 20px solid rgba(133, 134, 134, .5);
+            border: 20px solid rgba(255,230,173,.5);
             border-radius: 1.2rem;
             width: 80%;
             height: 50%;
@@ -96,7 +96,7 @@ header{
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        background-image: linear-gradient(to bottom right, rgba(37,201,206,0), rgba(37,201,206,1));
+        background-image: linear-gradient(to bottom right, rgba(255,230,173,0), rgba(255,230,173,1));
                
                
         @media(max-width: 500px) {
