--- a/less/home-page.less
+++ b/less/home-page.less
@@ -16,6 +16,10 @@
             font-size: 4rem;
             font-family: 'Podkova', serif;
             color: black;
+
+            @media(max-width: 500px) {
+                font-size: 2.5rem;
+            }
         
         }
     
@@ -24,11 +28,18 @@
             width: 50%;
             color: black;
             
+            @media(max-width: 500px) {
+                width: 90%;
+            }
         }
         hr {
             width: 60%;
             border: 1px solid grey;
             padding: 1%,0;
+        
+            @media(max-width: 500px) {
+                width: 90%;
+            }
         }
     }
 
@@ -59,6 +70,10 @@
            font-family: 'Life Savers', cursive;
            font-size: 1.5rem;
            color:black;
+       
+            @media (max-width: 1000px) {
+                font-size: .9rem;
+            }
        }
         
         .otter_icon {
@@ -66,6 +81,16 @@
             display: flex;
             flex-direction: row;
            
+           @media (max-width: 1000px) {
+               flex-direction: column;
+           
+           }
+            
+            svg {
+                @media(max-width: 500px){
+                    display: none;
+                }
+            }
             p {
                 padding: 5%;
 
@@ -75,6 +100,16 @@
             width: 25%;
             display: flex;
             flex-direction: row;
+            
+            @media (max-width: 1000px) {
+               flex-direction: column;
+           }
+            
+           svg {
+                @media(max-width: 500px){
+                    display: none;
+                }
+           }
             p {
                 padding: 5%;
             }
@@ -83,6 +118,16 @@
             width: 25%;
             display: flex;
             flex-direction: row;
+            
+            @media (max-width: 1000px) {
+               flex-direction: column;
+           }
+            
+            svg {
+                @media(max-width: 500px){
+                    display: none;
+                }
+            }
             p {
                 padding: 5%;
             }
@@ -91,18 +136,26 @@
     }
 }
 
-.section_two{
+.section_two {
     height:20%;
     width:100%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     
     img {
         height:25%;
         width:25%;
-        border-radius: 3rem;
+        border-radius: 5rem;
         padding: 2%;
     }
+    
+    .campaign_form {
+        display: inline-block;
+        width:100%;
+        
+        
+    }
+
 }
