--- a/less/navigation.less
+++ b/less/navigation.less
@@ -15,11 +15,15 @@ header{
         justify-content: center;
         align-items: center;
 
+        @media (max-width: 1000px) {
+            width: 100%;
+        }
+        
         @media (max-width: 500px) {
             width:100%;
         }        
                 
-    
+        
             
         .nav_container {
             
@@ -32,6 +36,11 @@ header{
             align-items: center;
             text-align: center;
                     
+           
+            @media (max-width: 1000px) {
+                width: 90%;
+            }
+            
             @media(max-width: 500px) {
                 border:none;
                 flex-direction: column;
@@ -50,6 +59,10 @@ header{
                 font-family: 'Podkova', serif;
                 font-weight: bolder;
                 
+                @media (max-width: 1000px) {
+                    font-size: 2rem;
+                }
+                
                 @media(max-width: 500px){
                     width: 95%;
                     font-size: 2rem;
@@ -63,6 +76,7 @@ header{
                 justify-content: space-evenly;
                 width: 70%;
                         
+                
                 @media(max-width: 500px){
                     height: 80%;
                     width: 95%;
@@ -78,6 +92,12 @@ header{
                     padding-top:2%;
                            
                           
+                    @media (max-width: 1000px) {
+                        font-size: 1.5rem;
+                        width: 30%;
+                        margin-right: 5%;
+                    }
+                    
                     @media(max-width: 500px){
                         width: 95%;
                         margin-top: 1%;
@@ -99,10 +119,6 @@ header{
         background-image: linear-gradient(to bottom right, rgba(255,230,173,0), rgba(255,230,173,1));
                
                
-        @media(max-width: 500px) {
-                    
-                    
-        }
             
         h1 {
           
@@ -111,10 +127,11 @@ header{
             width:50%;
             text-align: center;
 
-                
+            
             @media(max-width: 500px){
-                font-size: 2rem;
-                width: 50%;
+                font-size: 3rem;
+                font-weight: bold;
+                width: 80%;
                
             }
         }
@@ -124,8 +141,15 @@ header{
             font-size: 2rem;
             width: 50%;
             padding: 1%;
+            
+            @media (max-width: 1000px) {
+                padding: 5%;
+                width: 80%;
+            }
+            
             @media(max-width: 500px){
-                width:50%;
+                width:80%;
+                font-size: 1rem;
             }
             
         }
@@ -139,17 +163,31 @@ header{
             width:40%;
             text-align: center;
             
+            @media (max-width: 1000px) {
+                width: 70%;
+            }
+            @media(max-width: 500px) {
+                width: 80%;
+            }
+            
+            
             a {
                 text-decoration: none;
                 color: black;
+
+                @media(max-width:500px) {
+                    font-size: 2.2rem;
+                }
+            
             }
         }
         hr {
             
             
+            
             @media(max-width: 500px){
                 width:80%;
-                border: 1px solid red;
+            
             }
         }
             
