--- a/less/footer.less
+++ b/less/footer.less
@@ -1,7 +1,7 @@
 footer{
     display: flex;
     justify-content: space-evenly;
-    background-color: rgba(255,230,173,1);
+    background-color: @bgcolor;
 
    nav{ 
         width: 100%;
