--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,23 +1,22 @@
 .section_one {
-    display: flex;
-    color: rgba(255,230,173,1);
+    .flex-column;
+    color: @bgcolor;
     height:100%;
     width:100%;
-    flex-direction: column;
+    
     
     .section_one_heading {
         width:100%;
-        display: flex;
+        .flex-center;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
+    
     
         h1 {
             font-size: 4rem;
             font-family: 'Podkova', serif;
             color: black;
 
-            @media(max-width: 500px) {
+            @media @mobile {
                 font-size: 2.5rem;
             }
         
@@ -28,7 +27,7 @@
             width: 50%;
             color: black;
             
-            @media(max-width: 500px) {
+            @media @mobile {
                 width: 90%;
             }
         }
@@ -37,7 +36,7 @@
             border: 1px solid grey;
             padding: 1%,0;
         
-            @media(max-width: 500px) {
+            @media @mobile {
                 width: 90%;
             }
         }
@@ -45,9 +44,7 @@
 
     .pictures {
         height: 20%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        .flex-center;
         
         img {
             height: 100%;
@@ -71,7 +68,7 @@
            font-size: 1.5rem;
            color:black;
        
-            @media (max-width: 1000px) {
+            @media @tablet {
                 font-size: .9rem;
             }
        }
@@ -81,13 +78,13 @@
             display: flex;
             flex-direction: row;
            
-           @media (max-width: 1000px) {
+           @media @tablet {
                flex-direction: column;
            
            }
             
             svg {
-                @media(max-width: 500px){
+                @media @mobile {
                     display: none;
                 }
             }
@@ -101,12 +98,12 @@
             display: flex;
             flex-direction: row;
             
-            @media (max-width: 1000px) {
+            @media @tablet {
                flex-direction: column;
            }
             
            svg {
-                @media(max-width: 500px){
+                @media @mobile {
                     display: none;
                 }
            }
@@ -119,12 +116,12 @@
             display: flex;
             flex-direction: row;
             
-            @media (max-width: 1000px) {
+            @media @tablet {
                flex-direction: column;
            }
             
             svg {
-                @media(max-width: 500px){
+                @media @mobile {
                     display: none;
                 }
             }
