--- a/less/footer.less
+++ b/less/footer.less
@@ -2,6 +2,7 @@ footer{
     display: flex;
     justify-content: space-evenly;
     background-color: @bgcolor;
+    margin-top: 3%;
 
    nav{ 
         width: 100%;
