--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,7 +6,7 @@
     
     
     .section_one_heading {
-        width:100%;
+        width: 100%;
         .flex-center;
         flex-direction: column;
     
@@ -18,8 +18,8 @@
 
             @media @mobile {
                 font-size: 2.5rem;
+                
             }
-        
         }
     
         p {
@@ -31,6 +31,7 @@
                 width: 90%;
             }
         }
+        
         hr {
             width: 60%;
             border: 1px solid grey;
@@ -73,7 +74,7 @@
             }
        }
         
-        .otter_icon {
+        .mountain_icon {
             width:25%;
             display: flex;
             flex-direction: row;
@@ -93,7 +94,7 @@
 
             }
         }
-        .hippo_icon {
+        .paw_icon {
             width: 25%;
             display: flex;
             flex-direction: row;
@@ -111,7 +112,8 @@
                 padding: 5%;
             }
         }
-        .frog_icon {
+        
+        .bamboo_icon {
             width: 25%;
             display: flex;
             flex-direction: row;
@@ -129,30 +131,41 @@
                 padding: 5%;
             }
         }
+       
+        
     
+        
+        .butterflies, .koala, .red_panda {
+            width: 25%;
+            display: flex;
+            flex-direction: row;
+            
+            @media @tablet {
+               flex-direction: column;
+               padding: 5%;
+           }
+            
+            ul {
+                color: black;
+                margin-top: 2%;
+        
+                li {
+                    padding: 3%;
+                    font-family: 'Life Savers', cursive;
+
+                    @media @tablet {
+                        font-size: .8rem;
+                        margin-left: 10%;
+                    }
+                }
+            }
+            
+            p {
+                padding: 5%;
+                margin-right: 3%;
+            }
+        
+        }
     }
 }
 
-.section_two {
-    height:20%;
-    width:100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    
-    img {
-        height:25%;
-        width:25%;
-        border-radius: 5rem;
-        padding: 2%;
-    }
-    
-    .campaign_form {
-        display: inline-block;
-        width:100%;
-        
-        
-    }
-
-}
