--- a/less/navigation.less
+++ b/less/navigation.less
@@ -123,6 +123,10 @@ header{
             text-align: center;
 
             
+            @media @tablet {
+                font-size: 3.8rem;
+            }
+            
             @media @mobile {
                 font-size: 3rem;
                 font-weight: bold;
