--- a/less/global.less
+++ b/less/global.less
@@ -1,10 +1,43 @@
 
+.team {
+    background-image: linear-gradient(to top, rgba(255,230,173,0), @bgcolor);
+    .flex-center;
+    flex-direction: column;
+    font-family: 'Port Lligat Sans', sans-serif;
+    font-size: 2rem;
+    
+    .PL {
+        width:100%;
+        text-align: center;
+        
+        img {
+        border-radius: 30rem;
+        padding:1%;
+        }
+    }
+    
+    .Team_members{
+        width:100%;
+        display:flex;
+        flex-direction: row;
+        text-align: center;
 
-
-@media @mobile {
+        
+        img {
+        border-radius: 20rem;
+        width:50%;
+        padding:3%;
+        }
+    }
 
 }
 
 @media @tablet {
 
 }
+
+@media @mobile {
+
+}
+
+
