--- a/less/global.less
+++ b/less/global.less
@@ -4,7 +4,7 @@
     .flex-center;
     flex-direction: column;
     font-family: 'Port Lligat Sans', sans-serif;
-    font-size: 2rem;
+    font-size: 1.5rem;
     
     .PL {
         width:100%;
@@ -13,6 +13,9 @@
         img {
         border-radius: 30rem;
         padding:1%;
+        width:25%;
+        width:25%;
+        
         }
     }
     
@@ -32,12 +35,7 @@
 
 }
 
-@media @tablet {
 
-}
 
-@media @mobile {
-
-}
 
 
